Can't disable colour management for 3D view #32695

Closed
opened 2012-09-29 17:12:49 +02:00 by Alex Fraser · 3 comments
Member

%%%In recent builds, it seems that colour management can't be disabled for the 3D view. This causes materials that were set up without colour management to display incorrectly in the 3D view and in the game engine.

Attached is a screenshot of two versions of Blender with the same file loaded. On the left is r49322, which works correctly: the textures on the rock are not colour managed, and the GLSL materials render the same as the internal renderer. On the right is r50949, which appears to work incorrectly: the textures are too dark. However the internal renderer produces the same (correct, I think) result as the old version.

Also attached is a .blend file that demonstrates the problem.

System info:
Ubuntu 12.04, 64-bit
Graphics: AMD Mobility Radeon HD 5430 Series (fglrx driver)
Blender: 2.63.17 r49322 (OK) and 2.63.22 r50949 (problem), both from builder.blender.org%%%

%%%In recent builds, it seems that colour management can't be disabled for the 3D view. This causes materials that were set up without colour management to display incorrectly in the 3D view and in the game engine. Attached is a screenshot of two versions of Blender with the same file loaded. On the left is r49322, which works correctly: the textures on the rock are not colour managed, and the GLSL materials render the same as the internal renderer. On the right is r50949, which appears to work incorrectly: the textures are too dark. However the internal renderer produces the same (correct, I think) result as the old version. Also attached is a .blend file that demonstrates the problem. System info: Ubuntu 12.04, 64-bit Graphics: AMD Mobility Radeon HD 5430 Series (fglrx driver) Blender: 2.63.17 r49322 (OK) and 2.63.22 r50949 (problem), both from builder.blender.org%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fixed in svn rev50978. Thanks for the report, closing.%%%

%%%Fixed in svn rev50978. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#32695
No description provided.